--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -7,10 +7,10 @@
 Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' < Greek '''{{polytonic|[[βούτυρον]]}}''' ''boutyron'' (perhaps literally ‘cow-cheese’, from '''{{polytonic|[[βούς]]}}''' ''bous'' ‘ox, cow’ + '''{{polytonic|[[τυρός]]}}''' ''tyros'' ‘cheese’).  The West Germanic source also gave Dutch ''[[boter]]'', German ''[[Butter]]''.
 
 ===Pronunciation===
-*(''UK''): {{IPA|/ˈbʌtə/}}, {{SAMPA|/"bVt.@/}}
-*(''US''): {{AHD|bŭtʹər}}, {{IPA|/ˈbʌɾ.ɚ/}}, {{SAMPA|/"bV4.@`/}}
-*:{{audio|en-us-butter.ogg|Audio (US)}}
-*:Rhymes: [[Rhymes:English:-ʌtə(r)|-ʌtə(r)]]
+* (''UK''): {{IPA|/ˈbʌtə/}}, {{SAMPA|/"bVt.@/}}
+* (''US''): {{enPR|bŭtʹər}}, {{IPA|/ˈbʌɾ.ɚ/}}, {{SAMPA|/"bV4.@`/}}
+*: {{audio|en-us-butter.ogg|Audio (US)}}
+*: Rhymes: [[Rhymes:English:-ʌtə(r)|-ʌtə(r)]]
 
 ===Noun===
 {{en-noun|-|pl2=butters}}
@@ -18,209 +18,209 @@ Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' 
 # {{uncountable}} A soft, fatty foodstuff made by [[churn]]ing the [[cream]] of [[milk]] (generally cow's milk).
 # {{countable}} {{obsolete}} {{chemistry}} Any specific [[soft]] [[substance]]
 # {{uncountable}} Any of various foodstuffs made from other foods or oils, similar in consistency to, eaten like or intended as a substitute for butter (''preceded by the name of the food used to make it'').
-#:''peanut butter''
+#: ''peanut butter''
 
 ====Derived terms====
 {{rel-top4|terms derived from ''butter''}}
-*[[almond-butter]]
-*[[apple butter]]
-*[[as if butter would not melt in one's mouth]]
-*[[bean-butter]]
-*[[body butter]]
-*[[bog-butter]]
-*[[brandy butter]]
-*[[bread and butter]]
-*[[bread buttered on both sides]]
-*[[butteraceous]]
-*[[butter-ale]]
-*[[butter-and-egg man]]
-*[[butter and eggs]], [[butter-and-eggs]]
-*[[butter and tallow tree]]
-*[[butter-ball]], [[butterball]]
-*[[butter-back]]
-*[[butter-badger]]
-*[[butter-bag]]
-*[[butter-bake]]
-*[[butter-barrel]]
-*[[butter-basher]]
-*[[butter bean]]
-*[[butter-bird]]
-*[[butter-bitten]]
-*[[butter-boat]]
-*[[butterbore]]
-*[[butter-bowzy]]
-*[[butter-box]]
-*[[butter-boy]]
-*[[butterbread]]
-*[[butter brickle]]
-*[[butterbur]]
-*[[butter-bush]]
-*[[butter-cake]]
-*[[butterchurn]]
-*[[butter clam]]
+* [[almond-butter]]
+* [[apple butter]]
+* [[as if butter would not melt in one's mouth]]
+* [[bean-butter]]
+* [[body butter]]
+* [[bog-butter]]
+* [[brandy butter]]
+* [[bread and butter]]
+* [[bread buttered on both sides]]
+* [[butteraceous]]
+* [[butter-ale]]
+* [[butter-and-egg man]]
+* [[butter and eggs]], [[butter-and-eggs]]
+* [[butter and tallow tree]]
+* [[butter-ball]], [[butterball]]
+* [[butter-back]]
+* [[butter-badger]]
+* [[butter-bag]]
+* [[butter-bake]]
+* [[butter-barrel]]
+* [[butter-basher]]
+* [[butter bean]]
+* [[butter-bird]]
+* [[butter-bitten]]
+* [[butter-boat]]
+* [[butterbore]]
+* [[butter-bowzy]]
+* [[butter-box]]
+* [[butter-boy]]
+* [[butterbread]]
+* [[butter brickle]]
+* [[butterbur]]
+* [[butter-bush]]
+* [[butter-cake]]
+* [[butterchurn]]
+* [[butter clam]]
 {{rel-mid4}}
-*[[butter cloth]]
-*[[butter color]], [[butter colour]]
-*[[butter-cooler]]
-*[[butter cream]]
-*[[butter cross]]
-*[[buttercup]]
-*[[butter-cutter]]
-*[[butter dish]], [[butter-dish]]
-*[[butter dock]], [[butter-dock]]
-*[[butter-duck]]
-*[[butter-factor]]
-*[[butter fat]], [[butter-fat]], [[butterfat]]
-*[[butter-fingered]], [[butterfingered]]
-*[[butter-fingers]], [[butterfingers]]
-*[[butter-fish]], [[butterfish]]
-*[[butter-flip]]
-*[[butter-flower]]
+* [[butter cloth]]
+* [[butter color]], [[butter colour]]
+* [[butter-cooler]]
+* [[butter cream]]
+* [[butter cross]]
+* [[buttercup]]
+* [[butter-cutter]]
+* [[butter dish]], [[butter-dish]]
+* [[butter dock]], [[butter-dock]]
+* [[butter-duck]]
+* [[butter-factor]]
+* [[butter fat]], [[butter-fat]], [[butterfat]]
+* [[butter-fingered]], [[butterfingered]]
+* [[butter-fingers]], [[butterfingers]]
+* [[butter-fish]], [[butterfish]]
+* [[butter-flip]]
+* [[butter-flower]]
 <!--the origin of "butterfly" is uncertain, and so is given under "Related terms" instead-->
-*[[butter icing]]
-*[[butterie]]
-*[[butterine]]
+* [[butter icing]]
+* [[butterie]]
+* [[butterine]]
 <!--"butteriness" is under "buttery"-->
-*[[butterish]]
-*[[butter-jags]]
-*[[butter knife]], [[butter-knife]]
-*[[butter-lamp]]
-*[[butter-leaves]]
-*[[butterless]]
-*[[butter letter]]
-*[[butter-man]]
-*[[butter-mark]]
-*[[butter-milk]], [[buttermilk]]
-*[[butter-mold]], [[butter-mould]]
-*[[butter-mouth]]
-*[[butter muslin]]
-*[[butter-nut]], [[butternut]]
-*[[butter of almonds]]
-*[[butter of antimony]]
-*[[butter of arsenic]]
+* [[butterish]]
+* [[butter-jags]]
+* [[butter knife]], [[butter-knife]]
+* [[butter-lamp]]
+* [[butter-leaves]]
+* [[butterless]]
+* [[butter letter]]
+* [[butter-man]]
+* [[butter-mark]]
+* [[butter-milk]], [[buttermilk]]
+* [[butter-mold]], [[butter-mould]]
+* [[butter-mouth]]
+* [[butter muslin]]
+* [[butter-nut]], [[butternut]]
+* [[butter of almonds]]
+* [[butter of antimony]]
+* [[butter of arsenic]]
 {{rel-mid4}}
-*[[butter of bismuth]]
-*[[butter of cacao]]
-*[[butter of mace]]
-*[[butter of tin]]
-*[[butter of wax]]
-*[[butter of zinc]]
-*[[butter oil]]
-*[[butter paper]]
-*[[butter-pat]]
-*[[butter-pear]]
-*[[butter-plate]]
-*[[butter-print]]
-*[[butter-queen]]
-*[[butter-rigged]]
-*[[butter-root]]
-*[[butter salt]]
-*[[butter scoop]]
-*[[butterscot]], [[butter-scotch]], [[butterscotch]]
-*[[butter-slide]]
-*[[butter spade]]
-*[[butter-spreader]]
-*[[butter stamp]]
-*[[butter-stick]]
-*[[butter substitute]]
-*[[butter tart]]
-*[[butter-toast]]
-*[[butter tongs]]
-*[[butter-tooth]]
-*[[butter-toothed]]
-*[[butter-tree]]
-*[[butter trier]]
-*[[butter-weed]], [[butterweed]]
-*[[butter week]]
+* [[butter of bismuth]]
+* [[butter of cacao]]
+* [[butter of mace]]
+* [[butter of tin]]
+* [[butter of wax]]
+* [[butter of zinc]]
+* [[butter oil]]
+* [[butter paper]]
+* [[butter-pat]]
+* [[butter-pear]]
+* [[butter-plate]]
+* [[butter-print]]
+* [[butter-queen]]
+* [[butter-rigged]]
+* [[butter-root]]
+* [[butter salt]]
+* [[butter scoop]]
+* [[butterscot]], [[butter-scotch]], [[butterscotch]]
+* [[butter-slide]]
+* [[butter spade]]
+* [[butter-spreader]]
+* [[butter stamp]]
+* [[butter-stick]]
+* [[butter substitute]]
+* [[butter tart]]
+* [[butter-toast]]
+* [[butter tongs]]
+* [[butter-tooth]]
+* [[butter-toothed]]
+* [[butter-tree]]
+* [[butter trier]]
+* [[butter-weed]], [[butterweed]]
+* [[butter week]]
 {{rel-mid4}}
-*[[butter-weight]]
-*[[butter-whore]]
-*[[butter-wife]]
-*[[butter-woman]]
-*[[butter-worker]]
-*[[butter-working]]
-*[[butterwort]]
-*[[buttery]]
-*[[butter yellow]]
-*[[cacao butter]]
-*[[clarified butter]]
-*[[cocoa butter]]
-*[[coconut butter]]
-*[[cocum butter]], [[kokum butter]]
-*[[dika-butter]]
-*[[drawn butter]]
-*[[duck butter]]
-*[[fairy butter]], [[fairy's butter]]
-*[[Galam butter]]
-*[[gren butter]]
-*[[know which side one's bread is buttered|know which side one's bread is buttered (on)]]
-*[[mahwa-butter]]
-*[[make butter and cheese of]]
-*[[May butter]]
-*[[melted butter]]
-*[[nut butter]]
-*[[palm-butter]]
-*[[peanut butter]]
-*[[rock butter]]
-*[[rum butter]]
-*[[run butter]]
-*[[shea butter]]
-*[[sugar-butter sauce]]
-*[[vegetable butter]]
-*[[witches' butter]]
+* [[butter-weight]]
+* [[butter-whore]]
+* [[butter-wife]]
+* [[butter-woman]]
+* [[butter-worker]]
+* [[butter-working]]
+* [[butterwort]]
+* [[buttery]]
+* [[butter yellow]]
+* [[cacao butter]]
+* [[clarified butter]]
+* [[cocoa butter]]
+* [[coconut butter]]
+* [[cocum butter]], [[kokum butter]]
+* [[dika-butter]]
+* [[drawn butter]]
+* [[duck butter]]
+* [[fairy butter]], [[fairy's butter]]
+* [[Galam butter]]
+* [[gren butter]]
+* [[know which side one's bread is buttered|know which side one's bread is buttered (on)]]
+* [[mahwa-butter]]
+* [[make butter and cheese of]]
+* [[May butter]]
+* [[melted butter]]
+* [[nut butter]]
+* [[palm-butter]]
+* [[peanut butter]]
+* [[rock butter]]
+* [[rum butter]]
+* [[run butter]]
+* [[shea butter]]
+* [[sugar-butter sauce]]
+* [[vegetable butter]]
+* [[witches' butter]]
 {{rel-bottom}}
 
 ====Related terms====
-*[[butterfly]]<!--origin uncertain-->
-*[[butter-ham]]<!--from Dutch-->
+* [[butterfly]]<!--origin uncertain-->
+* [[butter-ham]]<!--from Dutch-->
 
 ====Translations====
 {{trans-top|soft foodstuff made from milk}}
-*Arabic: {{ARchar|[[زبدة]]}} (zúbda) {{f}}
-*Bavarian: [[Budda]] {{m}}
-*[[Breton]]: [[amanenn]] {{m}}
-*Bulgarian: [[масло#Bulgarian|масло]] (máslo) {{n}}
-*[[Catalan]]: [[mantega]] {{f}}
-*Chinese: [[黄油]] (huáng-yóu)
-*Czech: [[máslo]]  {{n}}
-*Danish: [[smør]]
-*Dutch: [[boter]] {{f}}
-*Esperanto: [[butero]]
-*Estonian: [[või]], [[peagalööja]]
-*Finnish: [[voi]]
-*French: [[beurre]] {{m}}
-*German: [[Butter]] {{f}}
-*Greek: [[βούτυρο]] (vútiro) {{n}}
-*Hebrew: [[חמאה|חֶמְאָה]] (khem'a) {{f}}
-*Hindi: [[मक्खन]] (makkhan) {{m}}, [[नवनीत]] (navnīt) {{m}}, [[नोनी]] (nonī) {{f}}
-*Hungarian: [[vaj]]
-*[[Ido]]: [[butro]]
-*[[Interlingua]]: [[butyro]]
-*Italian: [[burro#Italian|burro]] {{m}}
-*Japanese: [[バター]] (batā)
+* Arabic: {{ARchar|[[زبدة]]}} (zúbda) {{f}}
+* Bavarian: [[Budda]] {{m}}
+* [[Breton]]: [[amanenn]] {{m}}
+* Bulgarian: [[масло#Bulgarian|масло]] (máslo) {{n}}
+* [[Catalan]]: [[mantega]] {{f}}
+* Chinese: [[黄油]] (huáng-yóu)
+* Czech: [[máslo]]  {{n}}
+* Danish: [[smør]]
+* Dutch: [[boter]] {{f}}
+* Esperanto: [[butero]]
+* Estonian: [[või]], [[peagalööja]]
+* Finnish: [[voi]]
+* French: [[beurre]] {{m}}
+* German: [[Butter]] {{f}}
+* Greek: [[βούτυρο]] (vútiro) {{n}}
+* Hebrew: [[חמאה|חֶמְאָה]] (khem'a) {{f}}
+* Hindi: [[मक्खन]] (makkhan) {{m}}, [[नवनीत]] (navnīt) {{m}}, [[नोनी]] (nonī) {{f}}
+* Hungarian: [[vaj]]
+* [[Ido]]: [[butro]]
+* [[Interlingua]]: [[butyro]]
+* Italian: [[burro#Italian|burro]] {{m}}
+* Japanese: [[バター]] (batā)
 {{trans-mid}}
-*[[Kinyarwanda]]: [[amavuta]]
-*Korean: [[버터]] (beoteo)
-*Kurdish: {{KUchar|[[که‌ره‌]]}}
-*Lao: {{Laoo|[[ເບີ]]}} (bəə)
-*Latvian: [[sviests]] {{m}}
-*Lithuanian: [[sviestas]] {{m}}
-*[[Macedonian]]: [[путер]] {{m}}
-*Mongolian: {{RUchar|[[цөцгийн тос]]}} (tsötsgiin tos)
-*Polish: [[masło]] {{n}}
-*Portuguese: [[manteiga]] {{f}}
-*Romanian: [[unt]] {{n}}
-*Russian: [[сливочное масло]] (slívočnoje máslo) {{n}}
-*[[Scottish Gaelic]]: [[ìm]] {{m}}
-*Serbian: [[маслац]] ([[maslac]]) {{m}}
-*Slovak: [[maslo]] {{n}}
-*Slovene: [[maslo]] {{n}}, [[puter]] {{m}} (''colloq.'')
-*Spanish: [[mantequilla]] {{f}}, [[manteca]] {{f}} (''Argentina, Paraguay, Uruguay'')
-*Swedish: [[smör]] {{n}}
-*[[Telugu]]: [[వెన్న]]
-*Thai: {{THchar|[[เนย]]}} (noey)
-*Ukrainian: [[масло#Ukrainian|масло]] (máslo) {{n}}
-*Vietnamese: [[bơ]]
+* [[Kinyarwanda]]: [[amavuta]]
+* Korean: [[버터]] (beoteo)
+* Kurdish: {{KUchar|[[که‌ره‌]]}}
+* Lao: {{Laoo|[[ເບີ]]}} (bəə)
+* Latvian: [[sviests]] {{m}}
+* Lithuanian: [[sviestas]] {{m}}
+* [[Macedonian]]: [[путер]] {{m}}
+* Mongolian: {{RUchar|[[цөцгийн тос]]}} (tsötsgiin tos)
+* Polish: [[masło]] {{n}}
+* Portuguese: [[manteiga]] {{f}}
+* Romanian: [[unt]] {{n}}
+* Russian: [[сливочное масло]] (slívočnoje máslo) {{n}}
+* [[Scottish Gaelic]]: [[ìm]] {{m}}
+* Serbian: [[маслац]] ([[maslac]]) {{m}}
+* Slovak: [[maslo]] {{n}}
+* Slovene: [[maslo]] {{n}}, [[puter]] {{m}} (''colloq.'')
+* Spanish: [[mantequilla]] {{f}}, [[manteca]] {{f}} (''Argentina, Paraguay, Uruguay'')
+* Swedish: [[smör]] {{n}}
+* [[Telugu]]: [[వెన్న]]
+* Thai: {{THchar|[[เนย]]}} (noey)
+* Ukrainian: [[масло#Ukrainian|масло]] (máslo) {{n}}
+* Vietnamese: [[bơ]]
 {{trans-bottom}}
 
 {{trans-top|in chemistry}}
@@ -235,40 +235,40 @@ Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' 
 {{en-verb}}
 
 # {{transitive}} To [[spread]] butter on.
-#:'''''Butter''' the toast.''
+#: '''''Butter''' the toast.''
 
 ====Derived terms====
-*[[buttered]]<!--adjective-->
-*[[buttering]]<!--adjective and noun-->
-*[[butter one's bread on both sides]]
-*[[butter the cony]]
-*[[butter up]]
-*[[fine words butter no parsnips]]
-*[[have one's bread buttered for life]]
-*[[know which side one's bread is buttered]]
+* [[buttered]]<!--adjective-->
+* [[buttering]]<!--adjective and noun-->
+* [[butter one's bread on both sides]]
+* [[butter the cony]]
+* [[butter up]]
+* [[fine words butter no parsnips]]
+* [[have one's bread buttered for life]]
+* [[know which side one's bread is buttered]]
 
 ====Translations====
 {{trans-top|to spread butter on}}
-*Czech: [[mazat]] [[máslo|máslem]] (''[[impf.]]''); [[namazat]] [[máslo|máslem]]; [[pomazat]] [[máslo|máslem]] (''[[pf.]]'')
-*Danish: [[smøre]] brødet
-*Dutch: [[beboteren]], [[inboteren]], met boter [[besmeren]]
-*French: [[beurrer]]
-*German: [[mit]] Butter [[bestreichen]]
-*[[Interlingua]]: [[butyrar]]
+* Czech: [[mazat]] [[máslo|máslem]] (''[[impf.]]''); [[namazat]] [[máslo|máslem]]; [[pomazat]] [[máslo|máslem]] (''[[pf.]]'')
+* Danish: [[smøre]] brødet
+* Dutch: [[beboteren]], [[inboteren]], met boter [[besmeren]]
+* French: [[beurrer]]
+* German: [[mit]] Butter [[bestreichen]]
+* [[Interlingua]]: [[butyrar]]
 {{trans-mid}}
-*Italian: [[imburrare]]
-*Polish: [[smarować]] [[masłem]]
-*Portuguese: [[amanteigar]]; [[passar]] [[manteiga]] [[em]]
-*Russian: [[намазывать]] [[масло|маслом]] (namázyvat’ máslom)
-*Slovene: [[namazati z maslom]]
-*Spanish: [[untar]] [[mantequilla]]
-*Thai: {{THchar|[[ทาเนย]]}} (ta noey)
-*Vietnamese: [[quẹt]] bơ (vào)
+* Italian: [[imburrare]]
+* Polish: [[smarować]] [[masłem]]
+* Portuguese: [[amanteigar]]; [[passar]] [[manteiga]] [[em]]
+* Russian: [[намазывать]] [[масло|маслом]] (namázyvat’ máslom)
+* Slovene: [[namazati z maslom]]
+* Spanish: [[untar]] [[mantequilla]]
+* Thai: {{THchar|[[ทาเนย]]}} (ta noey)
+* Vietnamese: [[quẹt]] bơ (vào)
 {{trans-bottom}}
 
 ===See also===
-*[[butyraceous]]
-*[[ghee]]
+* [[butyraceous]]
+* [[ghee]]
 
 [[Category:1000 English basic words]]
 
