--- a/en/慝/慝.15729.wikitext
+++ b/en/慝/慝.15729.wikitext
@@ -1,31 +1,51 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=11|sn=15|four=7133<sub>1</sub>|canj=尸口心 (SRP)}}
+
 # do evil in secret
 # [[evil]], [[vice]]
+
 ====References====
-{{Han ref|kx=0399.030|dkj=11100|dj=0738.090|hdz=42333.010|uh=615D|ud=24925|bh=BC7C|bd=48252}}
+* {{Han ref|kx=0399.030|dkj=11100|dj=0738.090|hdz=42333.010|uh=615D|ud=24925|bh=BC7C|bd=48252}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=nik1, tik1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心11}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[とく]] (toku)|kun=[[わるい]] (warui)}}
+* {{ja-readings|on=[[とく]] (toku)|kun=[[わるい]] (warui)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=특|eumhun=|rv=teuk|mr=t'ŭk|y=thuk}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[tè]] ([[te4]])|wg=t'e<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:慝]]
