--- a/en/昴/昴.16989.wikitext
+++ b/en/昴/昴.16989.wikitext
@@ -1,25 +1,33 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=6072<sub>7</sub>|canj=日竹竹中 (AHHL)}}
+
 # one of the 28 constellations, the [[Pleiades]]
+
 ====References====
-{{Han ref|kx=0494.060|dkj=13865|dj=0858.120|hdz=21503.020|uh=6634|ud=26164|bh=CEF6|bd=52982}}
+* {{Han ref|kx=0494.060|dkj=13865|dj=0858.120|hdz=21503.020|uh=6634|ud=26164|bh=CEF6|bd=52982}}
 
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=maau5}}
+
 # {{defn|Cantonese}}
 
 ----
+
 ==Japanese==
 
 ===Kanji===
 {{ja-kanji|grade=n|rs=日05}}
+
 # {{defn|Japanese}}
 
 ====Readings====
-{{ja-readings|on=[[ぼう]] (bō)|kun=[[すばる]] (subaru)}}
+* {{ja-readings|on=[[ぼう]] (bō)|kun=[[すばる]] (subaru)}}
 
 ===Proper noun===
 {{ja-pos|k|proper|hira=すばる|rom=Subaru}}
@@ -29,14 +37,19 @@
 ----
 
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=[[묘]]|eumhun=|rv=myo|mr=myo|y=myo}}
+
 # {{defn|Korean}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[mǎo]] ([[mao3]]), [[nǐ]] ([[ni3]]), [[zhì]] ([[zhi4]])|wg=mao<sup>3</sup>, ni<sup>3</sup>, chih<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昴]]
