--- a/en/愮/愮.15681.wikitext
+++ b/en/愮/愮.15681.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=9707<sub>2</sub>|canj=心月人山 (PBOU)}}
+
 # [[distressed]], [[agitated]]
+
 ====References====
-{{Han ref|kx=0396.160|dkj=10990|dj=0735.020|hdz=42338.090|uh=612E|ud=24878|bh=DD6C|bd=56684}}
+* {{Han ref|kx=0396.160|dkj=10990|dj=0735.020|hdz=42338.090|uh=612E|ud=24878|bh=DD6C|bd=56684}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yáo]] ([[yao2]])|wg=yao<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愮]]
