--- a/en/偓/偓.11107.wikitext
+++ b/en/偓/偓.11107.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2721<sub>4</sub>|canj=人尸一土 (OSMG)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0110.210|dkj=00853|dj=0236.050|hdz=10198.010|uh=5053|ud=20563|bh=D451|bd=54353}}
+* {{Han ref|kx=0110.210|dkj=00853|dj=0236.050|hdz=10198.010|uh=5053|ud=20563|bh=D451|bd=54353}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=ak1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[あく]] (aku)|kun=[[かかはるさま]] (kakaharusama)}}
+* {{ja-readings|on=[[あく]] (aku)|kun=[[かかはるさま]] (kakaharusama)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=악|rv=ak|mr=ak}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jiē]] ([[jie1]]), [[wò]] ([[wo4]])|wg=chieh<sup>1</sup>, wo<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偓]]
