--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -46,10 +46,9 @@ Abbreviation of Latin {{term|exempli gratia|exempli gratiā|lang=la|for example}
 *:Cyrillic: [[нпр.]] (''[[на]] [[пример]]'')
 *:Roman: [[npr.]] (''[[na]] [[primer]]'')
 *Slovak: [[napr.]] (''[[napríklad]]'')
-*Slovenian: [[npr.]] (''[[na]] [[primer]]'')
+*Slovene: [[npr.]] (''[[na]] [[primer]]'')
 *Spanish: [[por ejemplo]]
 *Swedish: [[t.ex.]], [[t ex]], [[tex.]] [[t. ex.]] (''[[till exempel]]''), [[exempelvis]]
-
 *Vietnamese: [[vd.]] ([[ví dụ]])
 {{bottom}}
 
