--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -73,9 +73,9 @@ From {{OF.}} ''[[conte]]''
 * Spanish: {{t+|es|punto|m}}, {{t+|es|cargo|m}}
 {{trans-bottom}}
 
-======Translations to be checked======
-{{checktrans}}
+{{checktrans-top}}
 *{{ttbc|Telugu}}: [[లెక్క]] (lekka), [[లెక్కింపు]] (lekkiMpu)
+{{trans-bottom}}
 
 ===Etymology 2===
 From {{OF.}} ''[[conter]]'', [[add up]] and tell a [[story]].
