--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -26,7 +26,7 @@ By abbreviation.
 
 ====Usage notes====
 * Used before [[neuter]] nouns in the [[singular]], indicating a specific person or thing instead of the general case.
-* About grammatical gender in Dutch: all [[diminutive]]s are automatically neuter; therefore, ''[[meisje]]'', "girl", is neuter. However, sex takes precedence in all the pronouns. Compare ''het kopje en zijn schotel'' (the (little) cup and '''its''' saucer) with ''het meisje en haar hoed'' (the (little) girl and '''her''' hat). In many cases the possessive pronoun ''[[zijn]]'' or ''[[haar]]'' is avoided when referring to inanimate neuter nouns; instead the [[pronominal adverb]] ''[[ervan]]'' is used: ''het kopje en de schotel ervan''.
+* About grammatical gender in Dutch: all [[infinitive]]s and [[diminutive]]s are automatically neuter; therefore, ''[[meisje]]'', "girl", is neuter. However, sex takes precedence in all the pronouns. Compare ''het kopje en zijn schotel'' (the (little) cup and '''its''' saucer) with ''het meisje en haar hoed'' (the (little) girl and '''her''' hat). In many cases the possessive pronoun ''[[zijn]]'' or ''[[haar]]'' is avoided when referring to inanimate nouns; instead the [[pronominal adverb]] ''[[ervan]]'' is used: ''het kopje en de schotel ervan''.
 
 ====Derived terms====
 * [[aan het]]
