--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -122,7 +122,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Spanish: {{t+|es|juego|m}}
 {{trans-bottom}}
 
-# (''turn-based games'') An action carried out when it is one's turn to play.
+{{trans-top|action carried out when it is one's turn to play}}
 * Finnish: {{t|fi|siirto}}, {{t|fi|peli}}
 {{trans-mid}}
 {{trans-bottom}}
