--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -1,6 +1,5 @@
-[[Image:Brick wall old.jpg|thumb|A brick wall]]
 ==English==
-{{wikipedia}}
+[[Image:Brick wall old.jpg|thumb|A brick wall]]
 
 ===Pronunciation===
 * {{enPR|/brĭk/}}, {{IPA|/brɪk/}}, {{SAMPA|/brIk/}}
@@ -10,20 +9,19 @@
 ===Noun===
 {{en-noun|s|-}}
 
-# A hardened block of [[mud]], [[clay]], etc, used for building.
+# {{countable}} A hardened block of [[mud]], [[clay]], etc, used for building.
 #: ''This house is made of '''bricks'''''.
 # {{uncountable}} Considered collectively, as a building material.
 #: ''This house is made of '''brick'''''.
+# {{informal|dated}} {{rfdef}}
+#: ''Thanks for helping me wash the car. You're a '''brick'''.''
+#* {{quote-book|year=1863|author=Elizabeth Caroline Grey|title=Good Society; Or, Contrasts of Character|url=http://books.google.com/books?id=JB6BWYCaQS8C&pg=PA72&dq=%22you%27re+a+brick%22&as_brr=3|page=72|passage=“It's easy to see you're a '''brick'''!” replied Lady Augusta, and the laugh again became general.}}
+#* {{quote-book|year=1906|author=Edith Nesbit|title=[[w:The Railway Children|The Railway Children]]|url=http://books.google.com/books?id=tLVPkFHLEZMC&pg=PA168&dq=%22you%27re+a+brick%22&as_brr=3&sig=bMkcYZ4ym_R-anlb_W206onJOf4|page=168|passage=‘Somebody had to stay with you,’ said Bobbie.<br>‘Tell you what, Bobbie,’ said Jim, ‘you’re a '''brick'''. Shake.’}}
+#* {{quote-book|year=1960|author=W.W. Jacobs|title=Cargoes|url=http://books.google.com/books?id=o2tFTib3eGQC&pg=PA45&dq=%22you%27re+a+brick%22+date:1940-1990&lr=&as_brr=3&sig=GQAlsIu4mx0WPYYdARw7Wxnbg9k|isbn=0828314306|page=45|passage=“Well, I’ll do what I can for you,” said the seaman, …“If you were only shorter, I'd lend you some clothes.”<br>“You're a '''brick''',” said the soldier gratefully.}}
+# {{slang}} An electronic device, especially a heavy box-shaped one, that has become non-functional or obsolete.
 # {{basketball}} A shot which misses, particularly one which bounces directly out of the basket.
 #: ''We can't win if we keep throwing up '''bricks''' from three-point land.''
-# {{informal|dated}} Term of endearment, especially towards a subject who has performed a favour of an act of kindness without expectation of reciprocity.
-#: ''Thanks for helping me wash the car. You're a '''brick'''.''
-#*{{quote-book|year=1863|author=Elizabeth Caroline Grey|title=Good Society; Or, Contrasts of Character|url=http://books.google.com/books?id=JB6BWYCaQS8C&pg=PA72&dq=%22you%27re+a+brick%22&as_brr=3|page=72|passage=“It's easy to see you're a '''brick'''!” replied Lady Augusta, and the laugh again became general.}}
-#*{{quote-book|year=1906|author=Edith Nesbit|title=[[w:The Railway Children|The Railway Children]]|url=http://books.google.com/books?id=tLVPkFHLEZMC&pg=PA168&dq=%22you%27re+a+brick%22&as_brr=3&sig=bMkcYZ4ym_R-anlb_W206onJOf4|page=168|passage=‘Somebody had to stay with you,’ said Bobbie.<br>‘Tell you what, Bobbie,’ said Jim, ‘you’re a '''brick'''. Shake.’}}
-#*{{quote-book|year=1960|author=W.W. Jacobs|title=Cargoes|url=http://books.google.com/books?id=o2tFTib3eGQC&pg=PA45&dq=%22you%27re+a+brick%22+date:1940-1990&lr=&as_brr=3&sig=GQAlsIu4mx0WPYYdARw7Wxnbg9k|isbn=0828314306|page=45|passage=“Well, I’ll do what I can for you,” said the seaman, …“If you were only shorter, I'd lend you some clothes.”<br>“You're a '''brick''',” said the soldier gratefully.}}
-# {{slang}} An electronic device, especially a heavy box-shaped one, that has been rendered non-functional and, usually, non-repairable.
-# {{informal}} a [[mobile phone]], especially one that is large and/or heavy relative to current models
-# {{informal}} An external [[power supply]] consisting of a small box with an integral [[male]] [[power plug]] and an attached [[electric cord]] terminating in a power plug.  A [[power brick]].
+# {{informal}} A [[power brick]]; an external [[power supply]] consisting of a small box with an integral [[male]] [[power plug]] and an attached [[electric cord]] terminating in a power plug.
 
 ====Derived terms====
 {{rel-top4|terms derived from brick (noun)}}
@@ -156,7 +154,7 @@
 #* '''1904''', Thomas Hansom Cockin, ''An Elementary Class-Book of Practical Coal-Mining'', C. Lockwood and Son, page 78
 #*: If the ground is strong right up to the surface, a few yards are usually sunk and '''bricked''' before the engines and pit top are erected<!-- ;-->
 #* '''1914''', ''The Mining Engineer'', Institution of Mining Engineers, page 349
-#*: The shaft was next bricked between the decks until the top scaffold was supported by the brickwork and [made] to share the weight with the prids.
+#*: The shaft was next '''bricked''' between the decks until the top scaffold was supported by the brickwork and [made] to share the weight with the prids.
 # To make into bricks.
 #* '''1904''' September 15, James C. Bennett, Walter Renton Ingalls (editor), ''Lead Smelting and Refining with Some Notes on Lead Mining'' (1906), The Engineering and Mining Journal, page 66
 #*: The plant, which is here described, for '''bricking''' fine ores and flue dust, was designed and the plans produced in the engineering department of the Selby smelter.
@@ -178,6 +176,9 @@
 
 [[Category:1000 English basic words]]
 [[Category:Building materials]]
+
+===External links===
+* {{pedialite}}
 
 ----
 
