--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -1,21 +1,21 @@
 ==English==
 
 ===Alternative forms===
-*'''[[&c]]''' {{italbrac|archaic}}
-*'''[[&c.]]''' {{italbrac|archaic}}
-*'''[[etc]]'''
-*'''[[etc.]]'''
-*'''[[etcetera]]'''
-*'''[[et cætera]]'''
-*'''[[et coetera]]'''
+* '''[[&c]]''' {{italbrac|archaic}}
+* '''[[&c.]]''' {{italbrac|archaic}}
+* '''[[etc]]'''
+* '''[[etc.]]'''
+* '''[[etcetera]]'''
+* '''[[et cætera]]'''
+* '''[[et coetera]]'''
 
 ===Etymology===
 From Latin phrase ''[[#Latin|et cetera]]'', meaning “and the rest”
 
 ===Pronunciation===
-*{{IPA|/ˌɛt ˈsɛtərə/}}
-*{{audio|en-us-etc.ogg|Audio (US)}}
-*Common mispronunciations: Eksetra, Eksetera
+* {{IPA|/ˌɛt ˈsɛtərə/}}
+* {{audio|en-us-etc.ogg|Audio (US)}}
+* Common mispronunciations: Eksetra, Eksetera
 
 ===Adverb===
 {{en-adv|-}}
@@ -25,39 +25,39 @@ From Latin phrase ''[[#Latin|et cetera]]'', meaning “and the rest”
 
 ====Translations====
 {{trans-top|and so on}}
-*Bulgarian: [[и така нататък]], [[и т.н.]]
-*Czech: [[a tak dále]], [[atd.]]
-*Danish: [[og så videre]], {{t+|da|osv.}}
-*Dutch: {{t+|nl|enzovoort}}, {{t+|nl|enz.}}, {{t+|nl|enzovoorts}}
-*Esperanto: [[kaj tiel plu]], [[k.t.p.]]
-*Estonian: [[ja nii edasi]], [[jne.]]
-*Finnish: [[ja niin edelleen]], {{t+|fi|jne.}}, [[ynnä muuta]]
-*French: {{t+|fr|et cétéra}}, {{t+|fr|etc.}}
-*German: {{t+|de|und so weiter}}, {{t+|de|usw.}}
-*Hebrew: [[וכדומה]]
-*Hungarian: [[satöbbi]], [[stb.]], [[(é)s a többi]]
-*Icelandic: [[og svo framvegis]] ('''[[o. s. frv.]]''')
-*Italian: [[eccetera]]
-*Japanese: [[など]] (nado), [[等]] (とう, tou)
+* Bulgarian: [[и така нататък]], [[и т.н.]]
+* Czech: [[a tak dále]], [[atd.]]
+* Danish: [[og så videre]], {{t+|da|osv.}}
+* Dutch: {{t+|nl|enzovoort}}, {{t+|nl|enz.}}, {{t+|nl|enzovoorts}}
+* Esperanto: [[kaj tiel plu]], [[k.t.p.]]
+* Estonian: [[ja nii edasi]], [[jne.]]
+* Finnish: [[ja niin edelleen]], {{t+|fi|jne.}}, [[ynnä muuta]]
+* French: {{t+|fr|et cétéra}}, {{t+|fr|etc.}}
+* German: {{t+|de|und so weiter}}, {{t+|de|usw.}}
+* Hebrew: [[וכדומה]]
+* Hungarian: [[satöbbi]], [[stb.]], [[(é)s a többi]]
+* Icelandic: [[og svo framvegis]] ('''[[o. s. frv.]]''')
+* Italian: [[eccetera]]
+* Japanese: [[など]] (nado), [[等]] (とう, tou)
 {{trans-mid}}
-*Korean: {{ko-inline|기타|gita}}
-*Latin: [[et cetera]]
-*Latvian: [[un tā tālāk]], [[utt.]]
-*Lithuanian: [[ir taip toliau]] [[ir t.t.]]
-*Mandarin Chinese: [[等]] (deng)
-*Polish: {{t+|pl|itd.}} [[i tak dalej]], {{t+|pl|itp.}} [[i tym podobne]]
-*Portuguese: {{t+|pt|et cetera}}
-*Russian: [[и так далее]], [[и т. д.]]
-*Serbian: [[и тако даље]], {{t+|sr|итд.}} ([[i tako dalje]], [[itd.]])
-*Slovak: [[a tak ďalej]]
-*Spanish: {{t+|es|etcétera}}, [[y más]]
-*Swedish: et cetera, [[etc.]], [[etcetera]], [[och så vidare]], {{t+|sv|o.s.v.}}, {{t+|sv|osv.}}, {{t+|sv|osv}} (informell) 
-*Turkish: [[ve saire]] ([[vs]]) ''(old-fashioned)'', [[ve bunun gibi]] (vb), [[ve benzeri]] (vb)
-*Vietnamese: [[vân vân]], [[v.v.]]
+* Korean: {{ko-inline|기타|gita}}
+* Latin: [[et cetera]]
+* Latvian: [[un tā tālāk]], [[utt.]]
+* Lithuanian: [[ir taip toliau]] [[ir t.t.]]
+* Mandarin Chinese: [[等]] (deng)
+* Polish: {{t+|pl|itd.}} [[i tak dalej]], {{t+|pl|itp.}} [[i tym podobne]]
+* Portuguese: {{t+|pt|et cetera}}
+* Russian: [[и так далее]], [[и т. д.]]
+* Serbian: [[и тако даље]], {{t+|sr|итд.}} ([[i tako dalje]], [[itd.]])
+* Slovak: [[a tak ďalej]]
+* Spanish: {{t+|es|etcétera}}, [[y más]]
+* Swedish: et cetera, [[etc.]], [[etcetera]], [[och så vidare]], {{t+|sv|o.s.v.}}, {{t+|sv|osv.}}, {{t+|sv|osv}} (informell)
+* Turkish: [[ve saire]] ([[vs]]) ''(old-fashioned)'', [[ve bunun gibi]] (vb), [[ve benzeri]] (vb)
+* Vietnamese: [[vân vân]], [[v.v.]]
 {{trans-bottom}}
 
 ====External links====
-{{pedialite}}
+* {{pedialite}}
 
 ----
 
@@ -72,9 +72,9 @@ From Latin phrase ''[[#Latin|et cetera]]'', meaning “and the rest”
 Often abbreviated ''etc.'' or ''&c''. ''[[Ampersand]]'' (''[[&]]'') comes from the Latin word ''[[et#Latin|et]]'', meaning ''and''.
 
 ===Related terms===
-*[[&]]
-*[[cetera]]
-*[[et]]
+* [[&]]
+* [[cetera]]
+* [[et]]
 
 [[Category:Latin phrases]]
 
