--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -47,7 +47,7 @@
 * [[Afrikaans]]: [[mooi]]
 * Albanian: i bukur {{m}}, e bukur {{f}}
 * [[Anglo-Saxon]]: [[wlitig]]
-* Arabic: {{ARchar|[[جميل]]}} (jamil)
+* Arabic: {{Arab|[[جميل]]}} (jamil)
 * [[Breton]]: [[brav]], [[kaer]]
 * Bulgarian: {{t+|bg|красив|sc=Cyrl}}, {{t+|bg|прекрасен|sc=Cyrl}}
 * [[Catalan]]: [[bell]], [[formós]]
@@ -75,7 +75,7 @@
 * Latin: {{t-|la|pulcher}}, {{t-|la|formosus|m}}, {{t+|la|bellus|m}}
 * [[Novial]]: [[beli]]
 * [[Old Norse]]: [[fagr]]
-* Persian: {{FAchar|[[زیبا]]}} (ziba)
+* Persian: {{fa-Arab|[[زیبا]]}} (ziba)
 * Polish: [[piękny]] {{m}}, [[piękna]] {{f}}, [[piękne]] {{n}}, [[piękni]] {{plural}}, [[piękne]] {{plural}},{{f}}
 * Portuguese: {{t+|pt|belo|m}}, {{t+|pt|bela|f}}, {{t+|pt|bonito|m}}, {{t-|pt|bonita|f}}
 * Romanian: {{t+|ro|frumos|m|n}}, {{t+|ro|frumoasă|f}}
@@ -84,11 +84,11 @@
 * Spanish: {{t-|es|hermoso}}, {{t+|es|bello}}, {{t+|es|lindo}}
 * Slovak: [[krásny]] {{m}}, krásna {{f}}, krásne {{n}}
 * Swedish: {{t+|sv|fin}}, {{t+|sv|vacker}}
-* [[Tajik]]: {{FAchar|[[نیلوفار]]}} (nilufar)
+* [[Tajik]]: {{fa-Arab|[[نیلوفار]]}} (nilufar)
 * [[Tamil]]: [[அழகிய]] [azhagiya]
 * [[Telugu]]: [[అందమైన]]
 * Turkish: {{t+|tr|güzel}}
-* Urdu: {{URchar|[[خوبصورت]]}} (<u>kh</u>ūbsūrat)
+* Urdu: {{ur-Arab|[[خوبصورت]]}} (<u>kh</u>ūbsūrat)
 * Vietnamese: [[đẹp]], [[đẹp đẽ]]
 {{trans-bottom}}
 
