--- a/en/昰/昰.16984.wikitext
+++ b/en/昰/昰.16984.wikitext
@@ -1,31 +1,43 @@
 {{see|是}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日一卜一 (AMYM)}}
+
 # var of 'to [[be]]', '[[summer]]'
 # [[name]]
+
 ====References====
-{{Han ref|kx=0494.010|dkj=13860|dj=0858.070|hdz=21497.040|uh=6630|ud=26160}}
+* {{Han ref|kx=0494.010|dkj=13860|dj=0858.070|hdz=21497.040|uh=6630|ud=26160}}
 
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[し]] (shi)|kun=[[これ]] (kore)}}
+* {{ja-readings|on=[[し]] (shi)|kun=[[これ]] (kore)}}
 
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=[[하]], [[시]]|eumhun=|rv=ha, si|mr=ha, si|y=ha, si}}
+
 # {{defn|Korean}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[shì]] ([[shi4]])|wg=shih<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昰]]
