--- a/en/倧/倧.11038.wikitext
+++ b/en/倧/倧.11038.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=1329<sub>1</sub>|canj=人十一火 (OJMF)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0108.180|dkj=00789|dj=0231.080|hdz=10184.030|uh=5027|ud=20519|bh=D0D9|bd=53465}}
+* {{Han ref|kx=0108.180|dkj=00789|dj=0231.080|hdz=10184.030|uh=5027|ud=20519|bh=D0D9|bd=53465}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=jung1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人08}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[そう]] (sō), [[す]] (su)|kun=}}
+* {{ja-readings|on=[[そう]] (sō), [[す]] (su)|kun=}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=종|rv=jong|mr=chong}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[zōng]] ([[zong1]])|wg=tsung<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:倧]]
