--- a/en/惿/惿.15635.wikitext
+++ b/en/惿/惿.15635.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9608<sub>1</sub>|canj=心日一人 (PAMO)}}
+
 # {{defn|Han|sort=心09}}
+
 ====References====
-{{Han ref|kx=0393.180|dkj=10882|dj=0729.140|hdz=42327.100|uh=60FF|ud=24831|bh=D94E|bd=55630}}
+* {{Han ref|kx=0393.180|dkj=10882|dj=0729.140|hdz=42327.100|uh=60FF|ud=24831|bh=D94E|bd=55630}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[tí]] ([[ti2]])|wg=t'i<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惿]]
