--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -174,6 +174,7 @@ From {{OF.}} ''[[poulser]]'' (modern ''[[pousser]]''), from {{L.}} ''[[pulsare]]
 [[it:push]]
 [[kk:push]]
 [[hu:push]]
+[[nl:push]]
 [[ja:push]]
 [[pt:push]]
 [[ru:push]]
