--- a/en/旰/旰.16920.wikitext
+++ b/en/旰/旰.16920.wikitext
@@ -1,31 +1,51 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=03|sn=7|four=6104<sub>0</sub>|canj=日一十 (AMJ), X日一十 (XAMJ)}}
+
 # [[sunset]], [[dusk]]
 # [[evening]]
+
 ====References====
-{{Han ref|kx=0490.050|dkj=13751|dj=0851.060|hdz=21486.070|uh=65F0|ud=26096|bh=CAF8|bd=51960}}
+* {{Han ref|kx=0490.050|dkj=13751|dj=0851.060|hdz=21486.070|uh=65F0|ud=26096|bh=CAF8|bd=51960}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=gon3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日03}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[かん]] (kan)|kun=[[くれる]] (kureru)}}
+* {{ja-readings|on=[[かん]] (kan)|kun=[[くれる]] (kureru)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=간|eumhun=|rv=gan|mr=kan|y=kan}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[gàn]] ([[gan4]]), [[hàn]] ([[han4]])|wg=kan<sup>4</sup>, han<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:旰]]
