--- a/en/愅/愅.15641.wikitext
+++ b/en/愅/愅.15641.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9405<sub>6</sub>|canj=心廿中十 (PTLJ)}}
+
 # {{defn|Han|sort=心09}}
+
 ====References====
-{{Han ref|kx=0393.330|dkj=10898|dj=0730.110|hdz=42326.030|uh=6105|ud=24837|bh=D943|bd=55619}}
+* {{Han ref|kx=0393.330|dkj=10898|dj=0730.110|hdz=42326.030|uh=6105|ud=24837|bh=D943|bd=55619}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[gé]] ([[ge2]])|wg=ko<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愅]]
