--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -41,6 +41,7 @@ Abbreviation of Latin {{term|exempli gratia|exempli gratiā|lang=la|for example}
 *Persian: [[براي مثال]]
 *Portuguese: [[por exemplo]]
 *Polish: [[np.]] (''[[na]] [[przykład]]'')
+*Romanian: [[de exemplu]]
 *Russian: [[напр.]]
 *Serbian: 
 *:Cyrillic: [[нпр.]] (''[[на]] [[пример]]'')
