--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -13,7 +13,7 @@
 #: ''This house is made of '''bricks'''''.
 # {{uncountable}} Considered collectively, as a building material.
 #: ''This house is made of '''brick'''''.
-# {{informal|dated}} {{rfdef}}
+# {{informal}} A [[helpful]] and [[reliable]] person
 #: ''Thanks for helping me wash the car. You're a '''brick'''.''
 #* {{quote-book|year=1863|author=Elizabeth Caroline Grey|title=Good Society; Or, Contrasts of Character|url=http://books.google.com/books?id=JB6BWYCaQS8C&pg=PA72&dq=%22you%27re+a+brick%22&as_brr=3|page=72|passage=“It's easy to see you're a '''brick'''!” replied Lady Augusta, and the laugh again became general.}}
 #* {{quote-book|year=1906|author=Edith Nesbit|title=[[w:The Railway Children|The Railway Children]]|url=http://books.google.com/books?id=tLVPkFHLEZMC&pg=PA168&dq=%22you%27re+a+brick%22&as_brr=3&sig=bMkcYZ4ym_R-anlb_W206onJOf4|page=168|passage=‘Somebody had to stay with you,’ said Bobbie.<br>‘Tell you what, Bobbie,’ said Jim, ‘you’re a '''brick'''. Shake.’}}
