--- a/en/o/observateur.1839.wikitext
+++ b/en/o/observateur.1839.wikitext
@@ -5,6 +5,7 @@
 *[[w:SAMPA|SAMPA]]: /Op.sER.va.t9R/
 
 ===Noun===
+{{fr-noun|m}}
 {{fr-infl-noun|sm=observateur|sf=observatrice|pm=observateurs|pf=observatrices|smp=ɔp.sɛʁ.va.tœʁ|sfp=ɔp.sɛʁ.vat.ʁis|pmp=ɔp.sɛʁ.va.tœʁ|pfp=ɔp.sɛʁ.vat.ʁis}}
 #[[observer]]
 
