--- a/en/惵/惵.15626.wikitext
+++ b/en/惵/惵.15626.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9409<sub>4</sub>|canj=心心廿木 (PPTD)}}
+
 # {{defn|Han|sort=心09}}
+
 ====References====
-{{Han ref|kx=0392.290|dkj=10861|dj=0728.130|hdz=42326.040|uh=60F5|ud=24821|bh=D944|bd=55620}}
+* {{Han ref|kx=0392.290|dkj=10861|dj=0728.130|hdz=42326.040|uh=60F5|ud=24821|bh=D944|bd=55620}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ちょう]] (chō), [[じょう]] (jō), [[きょう]] (kyō)|kun=[[やすらか]] (yasuraka)}}
+* {{ja-readings|on=[[ちょう]] (chō), [[じょう]] (jō), [[きょう]] (kyō)|kun=[[やすらか]] (yasuraka)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[diè]] ([[die4]])|wg=tieh<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惵]]
