--- a/en/倭/倭.11052.wikitext
+++ b/en/倭/倭.11052.wikitext
@@ -10,7 +10,7 @@
 # [[dwarf]], [[short]]<!-- Please show the example  to ferret out a reasonable explanation in literature　and history books -->
 
 ====References====
-{{Han ref|kx=0109.060|dkj=00796|dj=0232.040|hdz=10179.080|uh=502D|ud=20525|bh=ADD8|bd=44504}}
+* {{Han ref|kx=0109.060|dkj=00796|dj=0232.040|hdz=10179.080|uh=502D|ud=20525|bh=ADD8|bd=44504}}
 
 ----
 
@@ -31,7 +31,7 @@
 # {{defn|Japanese}}
 
 ====Readings====
-{{ja-readings|on=[[い]] (i) < [[ゐ]] (wi), [[わ]] (wa)|kun=[[したがう]] (shitagau), [[やまと]] (yamato)}}
+* {{ja-readings|on=[[い]] (i) < [[ゐ]] (wi), [[わ]] (wa)|kun=[[したがう]] (shitagau), [[やまと]] (yamato)}}
 
 ----
 
